[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airpine"
version = "0.1.0"
description = "Alpine.js integration for Air framework with excellent DX"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kentro Tech", email = "info@kentro.tech"},
]
keywords = ["air", "alpine", "alpinejs", "html", "web", "htmx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "air[standard]>=0.30.0",
    "fastapi[standard]>=0.121.2",
]

[project.optional-dependencies]
dev = [
    "air>=0.5.0",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/kentro-tech/airpine"
Repository = "https://github.com/kentro-tech/airpine"
Documentation = "https://github.com/kentro-tech/airpine#readme"

[tool.hatch.build.targets.wheel]
packages = ["airpine"]
